# lidar_localization_ros2

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md  dependencies.repos  package.xml
.github/workflows/: main.yml
docs/: benchmarking.md  boreas_mapless_public_dataset_workflow.md  competitive_roadmap.md  decisions.md  development_plan.md  experiments.md  frame_contract.md  g2_bbs_speedup.md  g3_live_closed_loop.md  global_localization.md  global_localization_lio_development_plan.md  global_localization_roadmap.md  handover_glim_frontend_codex.md  imu_estimation.md  interfaces.md  koide_gif_gallery.md  local_build.md  map_alignment.md  mapless_public_dataset_workflow.md  mid360_legged_jetson.md  phase1_koide_backend_comparison.md  pose_covariance.md  public_validation_log.md  quickstart.md  quickstart_validation.md  reliability_roadmap.md  research_driven_development_plan.md  research_validation_2026_07_13.md  troubleshooting.md  v1_1_relocalization.md  v1_status.md
experiments/: __init__.py  point_cloud_io.py  reporting.py
experiments/borderline_gate/: __init__.py  interface.py  results.json
experiments/correspondence_localizability/: __init__.py  interface.py  run_comparison.py  validation_2026_07_13.json  variants.py
experiments/glim_prior_map_localizer/: CMakeLists.txt  Dockerfile  README.md  TIGHTLY_COUPLED_DESIGN.md  results.json
experiments/glim_prior_map_localizer/include/glim_prior_map_localizer/: map_odom_policy.hpp  map_odom_transition_policy.hpp  map_state_prior.hpp  ply_loader.hpp  prior_map_factor_policy.hpp  prior_map_overlap_policy.hpp  recovery_consensus_policy.hpp  recovery_pose_policy.hpp  vgicp_refiner.hpp
experiments/glim_prior_map_localizer/src/: offline_match.cpp  prior_map_localizer.cpp  vgicp_refiner.cpp
experiments/glim_prior_map_localizer/test/: test_prior_map_overlap_policy.cpp
experiments/imu_bias_correction/: __init__.py  interface.py  validation_2026_07_13.json  variants.py
experiments/imu_dual_queue/: README.md  results.json
experiments/imu_guard/: __init__.py  interface.py  results.json
experiments/imu_scan_time_sync/: README.md  results.json
experiments/imu_seed_consistency/: README.md  results.json
launch/: global_localization_recovery.launch.py  lidar_localization.launch.py  mid360_legged_localization.launch.py  nav2_lidar_localization.launch.py  nav2_navigation.launch.py  pcl_localization.launch.py  quickstart.launch.py
param/: README.md  boreas_ndt_velodyne.yaml  hdl_imu_preint.yaml  istanbul_gtsam_smoother.yaml  koide_indoor_ndt.yaml  koide_indoor_smallgicp.yaml  localization.yaml  mid360_legged.yaml  nav2_humble_pointcloud.yaml  nav2_ndt_urban.yaml  nav2_ndt_urban_borderline_only.yaml  nav2_ndt_urban_recovery_retry_from_last_pose.yaml  nav2_ndt_urban_recovery_retry_from_last_pose_r3.yaml  nav2_ndt_urban_recovery_retry_from_last_pose_r3_gap1_seed15.yaml  nav2_ndt_urban_rejected_seed_update.yaml  nav2_ndt_urban_rejected_seed_update_r1.yaml  nav2_replay_safe.yaml  public_istanbul_60s_benchmark.yaml
rviz/: localization.rviz
scripts/: README.md  analyze_koide_imu_consistency.py  analyze_pose_covariance_calibration.py  augment_pointcloud_intensity.py  benchmark_analyze_drift_window  benchmark_bbs_backends.py  benchmark_compare_runs  benchmark_convert_traj_refined  benchmark_diagnostic_recorder  benchmark_drift_correlation_report  benchmark_eval_evo_ape  benchmark_eval_trajectory  benchmark_extract_pose_reference_from_rosbag2  benchmark_from_manifest  benchmark_make_graph_dataset  benchmark_pose_recorder  benchmark_runner  benchmark_sweep_localizer  bootstrap_colcon_workspace.sh  build_glim_runtime_evidence.py  build_gt_aligned_map_from_reference_csv.py  build_odometry_runtime_evidence.py  build_public_demo_report.py  build_public_validation_dashboard.py  build_relocalization_demo_report.py  check_koide_odometry_completion.py  check_koide_recovery_health.py  check_lidar_localization_bringup.py  check_mid360_legged_bringup.py  check_recovery_pose_gt.py  compare_nav2_reinit_supervisor_runs.py  compare_registration_relocalization_score_summaries.py  convert_boreas_sequence_to_rosbag2.py  convert_glim_dump_to_pose_csv.py  create_lidar_localization_config.py  demo_pose_arbitration.py  diagnose_local_map_crop_coverage.py  fetch_all_koide_sequences.sh  fetch_koide_hard_pointcloud_localization_dataset.sh  fetch_official_autoware_istanbul_dataset.sh  (+84 more)
src/: bbs_pybind.cpp  g2_ndt_score_pybind.cpp  lidar_localization_component.cpp  lidar_localization_node.cpp  pcl_localization_component.cpp  pcl_localization_node.cpp  relocalization_ndt_score_jobs.cpp
test/: bbs_golden_fixtures.inc  test_alignment_attempt_policy.cpp  test_alignment_diagnostic_ros_adapter.cpp  test_alignment_diagnostics_policy.cpp  test_alignment_failure_taxonomy.cpp  test_alignment_pipeline_policy.cpp  test_alignment_retry_policy.cpp  test_alignment_status_policy.cpp  test_analyze_koide_imu_consistency.py  test_bbs_branch_and_bound.cpp  test_bbs_cpp_backend_parity.py  test_bbs_relocalization_attempts.py  test_benchmark_compare_runs.py  test_benchmark_eval_trajectory.py  test_benchmark_from_manifest_system_command.py  test_benchmark_runner_cleanup.py  test_build_glim_runtime_evidence.py  test_build_odometry_runtime_evidence.py  test_callback_state_coordinator.cpp  test_check_koide_odometry_completion.py  test_check_koide_recovery_health.py  test_check_recovery_pose_gt.py  test_cli_command_contract.py  test_continuous_time_deskew_policy.cpp  test_convert_glim_dump_to_pose_csv.py  test_correspondence_localizability_experiment.py  test_create_lidar_localization_config.py  test_deskew_readiness_policy.cpp  test_exact_quadratic_coreset.cpp  test_exact_quadratic_coreset_reuse.cpp  test_g2_candidate_registration_rank_policy.py  test_glim_frontend_bridge_coverage.py  test_glim_frontend_harness.py  test_glim_map_odom_policy.cpp  test_glim_prior_map_factor_policy.cpp  test_glim_prior_map_ply_loader.cpp  test_global_localization_query.py  test_imu_bias_correction_experiment.py  test_imu_initialization_policy.cpp  test_imu_pose_history_deskew.cpp  (+59 more)
(+315 files in other folders)
